fix - misaligned menu buttons
instead of line height on the hamburger, setting display: flex
fixes both buttons (hamburger and close)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,6 +66,10 @@ hr {
   }
 }
 
+.bm-burger-button svg, .bm-menu-wrap svg {
+  display: flex;
+}
+
 .btn {
   text-transform: uppercase;
   font-weight: bold;
